--- a/integration_test/test_resources/config_test.yaml
+++ b/integration_test/test_resources/config_test.yaml
@@ -36,7 +36,7 @@ client:
  msp:
   id: "DEFAULT"
   url: "http://localhost:8888"
-  clientPath: "./test_resources/"
+  clientPath: "./integration_test/test_resources/"
 
  keystore:
   path: "C:/keystore"
